# SovLens

./: .gitignore  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json
.github/workflows/: release.yml
backend/: audio_ingest.py  config.py  constraints.txt  core.py  hls_stream.py  index_build.py  ingestion.py  main.py  ocr_detect.py  platform_utils.py  requirements-build.txt  requirements-cuda.txt  requirements.txt  sovlens-backend.spec  yolo_detect.py
backend/models/: .gitkeep
backend/scripts/: load_test.py
docs/: AUDIT-2026-05-21.md  RELEASING.md
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: README.md  build.bat  build.sh
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/windows/: hooks.nsh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/folders/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: JobBanner.tsx  MediaGrid.tsx  MediaModal.tsx  Sidebar.tsx  SplashScreen.tsx
frontend/src/lib/: format.ts  platform.ts  types.ts  useCopyFeedback.ts  useHls.ts
scripts/: validate.sh
