[package]
name = "app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
arboard = "3"
image = "0.25"
dirs = "5"
chrono = "0.4"
# Sidecar archive extraction. Onedir PyInstaller output ships as a single
# .tar.gz bundle resource on every OS (Win10+ tar.exe handles gzip via
# `tar -czf`) and is unpacked into the app-data dir on first launch (or
# after upgrade). Single codepath, no per-OS zip/tar split.
tar = "0.4"
flate2 = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"

[target.'cfg(target_os = "macos")'.dependencies]
# Set Dock icon at runtime in dev mode (raw exe has no .app bundle Info.plist).
objc2 = "0.5"
